updating add page

--- a/add.html
+++ b/add.html
@@ -66,9 +66,9 @@
       event.preventDefault();
       var newCharacter = {
         name: $("#name").val().trim(),
-        role: $("#role").val().trim(),
-        age: $("#age").val().trim(),
-        forcePoints: $("#force-points").val().trim()
+        phoneNumber: $("#phoneNumber").val().trim(),
+        email: $("#email").val().trim(),
+        uniqueID: $("#uniqueID").val().trim()
       };
 
       // Question: What does this code do??
