--- a/reserve.html
+++ b/reserve.html
@@ -55,7 +55,7 @@
 							</div>
 
 							<div class="form-group">
-								<label for="">Unique ID</label>
+								<label for="">U ID</label>
 								<input type="text" class="form-control" id="reserve_uniqueID">
 							</div>
 
