--- a/add.html
+++ b/add.html
@@ -75,7 +75,7 @@
       $.post("/api/new", newCharacter)
       .then(function(data) {
         console.log(data);
-        alert("Adding character...");
+        alert("Adding Reservation...");
       });
     });
   </script>
